Added release schedule video

--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
         </div>
     </section>
     
+    <div class="container" style="margin: 30px auto; display: block; text-align: center;">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/pNi3HZLozHg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
     <div class="compare">
       <div class="container">
         <div class="row">
