Aligned Youtube Showcases

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         <div class="col-md-12 col-sm-12 col-xs-12">
           <h2 id="para1">&nbsp;</h2>
           <h2>&nbsp;</h2>
-          <h2>Youtube Showcases</h2>
+          <h2>&nbsp;Youtube Showcases</h2>
 <p class="desc text-left">
 			&nbsp;&nbsp;&nbsp;Thank you to our YouTubers for showcasing our mod for over 1 million views worldwide!
 			</p>
